Fixed gap between tasks columns

--- a/source/client/app/app.css
+++ b/source/client/app/app.css
@@ -38,9 +38,13 @@ div.tasks {
     display: inline-block;
     vertical-align: top;
     width: 24%;
+    height: 100%;
+    font-size: 14px;
     margin: 0px 0px 0px 0px;
     padding: 0px 0px 0px 0px;
-    border: 1px solid #CCC;
+    border-top: 1px solid #CCC;
+    border-left: 1px solid #CCC;
+    border-bottom: 1px solid #CCC;'
 }
 
 div.tasks > ul {
@@ -127,6 +131,7 @@ a {
 
 #main-view {
     width: 100%;
+    font-size: 0;
     padding: 10px 10px 10px 165px;
 }
 
